Bug 406664 - "Select Color" page has no translation.
Summary: "Select Color" page has no translation.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Translation (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Microsoft Windows Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-04-18 22:39 UTC by Sabri Ünal
Modified: 2019-09-05 08:15 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
a screenshot of the bug (86.50 KB, image/png)
2019-04-18 22:39 UTC, Sabri Ünal
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sabri Ünal 2019-04-18 22:39:01 UTC
Created attachment 119492 [details]
a screenshot of the bug

SUMMARY

"Select Color" page has no translation. 


STEPS TO REPRODUCE
1. Choose Image - "Image Background Color and Transparency..." on English UI.
2. Change language to another.
3. Repeat the first path again.

OBSERVED RESULT

Page/Widget has no translation. 

EXPECTED RESULT

It must have been following the language.


SOFTWARE/OS VERSIONS

Krita

 Version: 4.2.0-pre-alpha
 Languages: en
 Hidpi: true

Qt

  Version (compiled): 5.9.5
  Version (loaded): 5.9.5

OS Information

  Build ABI: x86_64-little_endian-lp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: linux
  Kernel Version: 4.15.0-48-lowlatency
  Pretty Productname: Ubuntu 18.04.2 LTS
  Product Type: ubuntu
  Product Version: 18.04

ADDITIONAL INFORMATION

I have attached a screenshot which has been taken on Italian UI.
Comment 1 Halla Rempt 2019-04-18 22:45:13 UTC
This dialog is Qt's own QColorDialog, so it should use Qt's translations, not Krita's.
Comment 2 Halla Rempt 2019-04-18 22:56:03 UTC
Git commit f02d26a6a838a1fdacef55c9ac4a0864818a6fc1 by Boudewijn Rempt.
Committed on 18/04/2019 at 22:53.
Pushed by rempt into branch 'master'.

Explicitly set a translated title on the color dialog

QColorDialog is translated as part of Qt, so it's likely the rest
of the dialog won't be translated either. We can't do anything about
that.

M  +1    -1    libs/ui/kis_image_manager.cc
M  +1    -1    libs/ui/widgets/KoDualColorButton.cpp

https://invent.kde.org/kde/krita/commit/f02d26a6a838a1fdacef55c9ac4a0864818a6fc1