Explicitly set a translated title on the color dialog

QColorDialog is translated as part of Qt, so it's likely the rest
of the dialog won't be translated either. We can't do anything about
that.

BUG:406664